# add_to_notion_oxid

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  example.env
bot/: Cargo.toml
bot/src/: constants.rs  db.rs  handle_dialogue.rs  handle_message.rs  handlers.rs  image_upload.rs  img_push.rs  main.rs  telegram.rs
notion/: Cargo.toml
notion/src/: client.rs  lib.rs  new_page.rs
src/: bot.rs  constants.rs  db.rs  handle_dialogue.rs  handle_message.rs  main.rs
src/handlers/: command.rs  dialogue.rs  message.rs  mod.rs
src/notion/: client.rs  mod.rs  new_page.rs
