[package]
name = "bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.12.2", features = ["macros", "auto-send"] }
dotenvy = "0.15.7"
notion = { version = "0.1.0", path = "../notion" }
tokio = "1.38.0"
log = "0.4"
pretty_env_logger = "0.4"
regex = "1.10.5"
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
